--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
     <main id="home">
-        <h1 class="lg-heading">Aaaaaa <span class="text-secondery" style="color:#eece1a">Rahemi</span></h1>
+        <h1 class="lg-heading">Ali <span class="text-secondery" style="color:#eece1a">Rahemi</span></h1>
         <h2 class="sm-heading">Web Developer, Programmer, Photographer & Filmmaker </h2>
         <div class="icons">
             <a href="https://www.flickr.com/photos/165319924@N04/albums/" target="_blank" title="Flickr">
