--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
       <h2 class="sm-heading">Check out of my some projects</h2>
       <div class="projects">
         <div class="item">
-          <a href="https://github.com/alirahemi/portfolio"> <img src="img/project1.jpg" alt="project1" /> </a>
+          <a href="https://github.com/alirahemi/portfolio"> <img src="img/project1.JPG" alt="project1" /> </a>
           <a href="#!" class="btn-light">
             <i class="fas fa-eye"></i> Project1
           </a>
@@ -54,7 +54,7 @@
           </a>
         </div>
         <div class="item">
-          <a href="https://www.flickr.com/photos/165319924@N04/albums/72157668255927077"> <img src="img/project2.jpg" alt="project2" /> </a>
+          <a href="https://www.flickr.com/photos/165319924@N04/albums/72157668255927077"> <img src="img/project2.JPG" alt="project2" /> </a>
           <a href="#!" class="btn-light">
             <i class="fas fa-eye"></i> Project2
           </a>
@@ -63,7 +63,7 @@
           </a>
         </div>
         <div class="item">
-          <a href="https://www.flickr.com/photos/165319924@N04/albums/72157695405319082"> <img src="img/project3.jpg" alt="project3" /> </a>
+          <a href="https://www.flickr.com/photos/165319924@N04/albums/72157695405319082"> <img src="img/project3.JPG" alt="project3" /> </a>
           <a href="#!" class="btn-light">
             <i class="fas fa-eye"></i> Project3
           </a>
